# top-rated-tv-shows-from-tmdb

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.local.example  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  analytics.py  main.py  model_runtime.py  schemas.py
data/: sample_tv_shows.csv
docs/: COMPLIANCE.md  OPEN_SOURCE.md
ml/: __init__.py  features.py  train.py
models/: metrics.json  tmdb_rating_pipeline.joblib  training_meta.json
scripts/: render-start.sh
tests/: conftest.py  test_analytics.py  test_api.py  test_train.py
